[package]
name = "memory-size-type"
version = "0.1.0"
authors = ["Tim Janke <tim+github@janke.biz>"]
edition = "2018"
description = "A data type for dealing with memory sizes"
documentation = "https://docs.rs/memory-size-type"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flying7eleven/memory-size-type"
keywords = ["memory", "size", "datatype", "type"]
categories = ["value-formatting", "rust-patterns"]
exclude = [".github/", ".gitignore"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies.num-integer]
version = "0.1.44"
default-features = false
