[package]
name = "memory-size-type"
version = "0.4.1"
authors = ["Tim Janke <tim+github@janke.biz>"]
edition = "2021"
description = "A data type for dealing with memory sizes"
documentation = "https://docs.rs/memory-size-type"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flying7eleven/memory-size-type"
keywords = ["memory", "size", "datatype", "type"]
categories = ["value-formatting", "rust-patterns", "data-structures"]
exclude = [".github/", ".gitignore"]
rust-version = "1.57"

[features]
default = ["std"]
std = []

[badges]
maintenance = { status = "actively-developed" }